--- a/refund-policy.html
+++ b/refund-policy.html
@@ -510,7 +510,7 @@
 
         <div class="right-section">
             <div class="learners-block">
-                <h4>Why Choose YourPlatformName?</h4>
+                <h4>Why Choose Syncskill?</h4>
                 <ul>
                     <li>
                         <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
