--- a/refund-policy.html
+++ b/refund-policy.html
@@ -460,7 +460,7 @@
                             </svg>
                         </div>
                         <div class="accordion-content" id="accordion-content-4">
-                            <p>For special considerations, submit a request to <a href="mailto:harshavardhanjw@gmail.com">support@yourplatform.com</a>. Decisions by YourPlatformName management are final.</p>
+                            <p>For special considerations, submit a request to <a href="mailto:harshavardhanjw@gmail.com">harshavardhanjw@gmail.com</a>. Decisions by YourPlatformName management are final.</p>
                         </div>
                     </div>
                 </div>
@@ -502,7 +502,7 @@
                 <h4>Need Help?</h4>
                 <p class="para">Reach out to our support team for assistance with payments or technical issues:</p>
                 <ul>
-                    <li><a href="mailto:support@yourplatform.com">harshavardhanjw@gmail.com</a></li>
+                    <li><a href="mailto:harshavardhanjw@gmail.com">harshavardhanjw@gmail.com</a></li>
                     <li>+91-7799181716 (Mon–Fri, 10 AM–6 PM IST)</li>
                 </ul>
             </div>
