--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 html, body {
     overflow-x: hidden;
 }
-
+</style>
 
 
         
@@ -276,6 +276,7 @@ html, body {
             </div>
         </div>
     </div>
+        <div id="menuOverlay" style="position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.5); z-index: 999; display: none;"></div>
     <style>
          #featured-program * {
             all: unset;
@@ -360,8 +361,6 @@ html, body {
         }
 
     </style>
-
-    <div id="menuOverlay" style="position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.5); z-index: 999; display: none;"></div>
 
     <script>
         // Desktop Mega Menu
