--- a/index.html
+++ b/index.html
@@ -990,6 +990,8 @@ body {
   box-sizing: border-box;
   background-color: #ffffff;
   width: 100%;  /* Ensure full width available for the section */
+  margin-left: 16px;
+  margin-right: 16px;
 }
 
 .responsive-element {
