--- a/index.html
+++ b/index.html
@@ -955,168 +955,151 @@ html, body {
 
 
 
-   <!-- IBM Plex Font from Google Fonts -->
-<link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@400;600&display=swap" rel="stylesheet">
-
 <div class="center-wrapper">
-  <div class="responsive-element">
-    <div class="text-content">
-      <h1>Become Top 1% in the AI-First World</h1>
-      <p>Whether it is Product, Growth, Design, Business, Tech or Data, Syncskill is the place to learn from top experts in the field to become the Top 1%</p>
-      <button class="explore-button">
-        <svg width="20" height="20" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 7l5 5-5 5M6 12h12" />
-        </svg>
-        EXPLORE
-      </button>
-    </div>
-    <div class="image-content">
-      <img src="#" alt="AI Illustration">
+    <div class="responsive-element">
+      <div class="text-content">
+        <h1>Become Top 1% in the AI-First World</h1>
+        <p>Whether it's Product, Growth, Design, Business, Tech, or Data, Syncskill is the place to learn from top experts and join the elite.</p>
+        <button class="explore-button">
+          <svg width="16" height="16" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 7l5 5-5 5M6 12h12" />
+          </svg>
+          Explore Now
+        </button>
+      </div>
     </div>
   </div>
-</div>
-
 <style>
-body {
-  font-family: 'IBM Plex Sans', 'ibmPlex', 'ibmPlex Fallback', sans-serif;
-  margin: 0;
-  padding: 0;
-}
-
 .center-wrapper {
-  display: flex;
-  justify-content: center;
-  padding: 0px 0px;
-  box-sizing: border-box;
-  background-color: #ffffff;
-  width: 100%;  /* Ensure full width available for the section */
-  margin-left: 150px;
-  margin-right: 150px;
-}
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      min-height: 100vh;
+      padding: 2rem;
+    }
 
-.responsive-element {
-  background-color: #ffffff;
-  width: 1280px;              /* Exact width of the section */
-  height: 360px;              /* Exact height of the section */
-  color: #111827;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 40px 40px 0px 40px;
-  box-sizing: border-box;
-  border-radius: 12px;
-  gap: 40px;
-  border: 0px solid #002726;
-  margin: 0 auto;             /* Center it horizontally */
-}
+    .responsive-element {
+      max-width: 1000px;
+      width: 100%;
+      padding: 3rem;
+      display: flex;
+      flex-direction: row;
+      gap: 2.5rem;
+      align-items: center;
+    }
 
-.text-content {
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-}
+    .text-content {
+      flex: 1;
+      display: flex;
+      flex-direction: column;
+      gap: 2rem;
+    }
 
-.text-content h1 {
-  margin: 0 0 16px;
-  font-size: 32px;
-  font-weight: 600;
-  color: #111827;
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
-}
+    .text-content h1 {
+      font-size: 3rem;
+      font-weight: 600;
+      color: #111827;
+      line-height: 1.2;
+    }
 
-.text-content p {
-  margin: 0 0 24px;
-  font-size: 18px;
-  line-height: 1.5;
-  color: #374151;
-}
+    .text-content p {
+      font-size: 1.25rem;
+      color: #374151;
+      max-width: 600px;
+    }
 
-.explore-button {
-  background-color: #002726;
-  color: white;
-  padding: 12px 32px;
-  border: none;
-  border-radius: 6px;
-  font-weight: bold;
-  cursor: pointer;
-  display: inline-flex;
-  align-items: center;
-  gap: 8px;
-  transition: background-color 0.3s, transform 0.3s, box-shadow 0.3s;
-}
+    .explore-button {
+      background-color: #059669;
+      color: white;
+      width: 120px;
+      height: 30px;
+      padding: 0 8px;
+      border: none;
+      border-radius: 0.375rem;
+      font-size: 0.75rem;
+      font-weight: 600;
+      cursor: pointer;
+      display: inline-flex;
+      justify-content: center;
+      align-items: center;
+      gap: 0.5rem;
+      transition: background-color 0.3s, transform 0.2s, box-shadow 0.3s;
+    }
 
-.explore-button svg {
-  width: 20px;
-  height: 20px;
-  stroke: currentColor;
-  transition: transform 0.3s ease;
-}
+    .explore-button:hover {
+      background-color: #047857;
+      transform: translateY(-2px);
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
+    }
 
-.explore-button:hover {
-  background-color: #00b87b;
-  transform: translateY(-3px);
-  box-shadow: 0 4px 12px rgba(0, 255, 174, 0.3);
-}
+    .explore-button svg {
+      width: 16px;
+      height: 16px;
+      stroke: white;
+      transition: transform 0.3s ease;
+    }
 
-.explore-button:hover svg {
-  transform: translateX(4px);
-}
+    .explore-button:hover svg {
+      transform: translateX(0.25rem);
+    }
 
-.image-content {
-    display: none;
-  }
+    /* Mobile View */
+    @media (max-width: 768px) {
+      .center-wrapper {
+        padding: 1rem;
+      }
 
-.image-content img {
-  width: 350px;
-  height: 350px;
-  object-fit: cover;
-  border-radius: 8px;
-}
+      .responsive-element {
+        flex-direction: column;
+        padding: 1rem; /* Reduced for smaller screens */
+        max-width: 100%;
+      }
 
-/* Mobile View */
-@media only screen and (max-width: 768px) {
-  body {
-    margin-left: 10px;  /* Small margin on the left */
-    margin-right: 10px; /* Small margin on the right */
-  }
+      .text-content h1 {
+        font-size: 1.5rem; /* Reduced to fit single line */
+        line-height: 1.2;
+        white-space: nowrap; /* Keep heading on one line */
+        overflow: hidden;
+        text-overflow: ellipsis; /* Handle overflow gracefully */
+      }
 
-  .center-wrapper {
-    padding: 20px 0; /* Adjust padding for mobile */
-  }
+      .text-content p {
+        font-size: 1rem;
+        max-width: 100%;
+      }
 
-  .responsive-element {
-    flex-direction: column;
-    width: 100%;
-    max-width: 430px;
-    padding: 24px 24px 0px 24px;
-    margin-left: 20px;
-    margin-right: 20px;
-    height: auto;  /* Let the height be dynamic for mobile */
-  }
+      .explore-button {
+        width: 100%;
+        height: auto;
+        padding: 10px 24px;
+        font-size: 0.875rem;
+      }
 
-  /* Hide image in mobile view */
-  .image-content {
-    display: none;
-  }
+      .explore-button svg {
+        width: 1.25rem;
+        height: 1.25rem;
+      }
+    }
 
-  .text-content h1 {
-    font-size: 20px;
-    white-space: nowrap;
-      font-weight: bold;
-  }
+    /* Extra Small Screens */
+    @media (max-width: 360px) {
+      .text-content h1 {
+        font-size: 1.25rem; /* Further reduce for very small screens */
+      }
+    }
 
-  .text-content p {
-    font-size: 14px; /* Decrease the size of the paragraph */
-  }
+    /* Accessibility Enhancements */
+    .explore-button:focus {
+      outline: 2px solid #059669;
+      outline-offset: 2px;
+    }
 
-  .explore-button {
-    padding: 10px 24px;
-    font-size: 14px;
-  }
-}
+    @media (prefers-reduced-motion: reduce) {
+      .explore-button,
+      .explore-button svg {
+        transition: none;
+      }
+    }
 </style>
 
 
