--- a/index.html
+++ b/index.html
@@ -975,13 +975,13 @@ html, body {
       justify-content: center;
       align-items: center;
       min-height: 100vh;
-      padding: 0rem;
+      padding: 1rem 2rem; /* Reduced top/bottom padding */
     }
 
     .responsive-element {
       max-width: 1000px;
       width: 100%;
-      padding: 3rem;
+      padding: 1rem 3rem; /* Reduced top/bottom padding */
       display: flex;
       flex-direction: row;
       gap: 2.5rem;
@@ -992,7 +992,7 @@ html, body {
       flex: 1;
       display: flex;
       flex-direction: column;
-      gap: 2rem;
+      gap: 1rem; /* Reduced gap */
     }
 
     .text-content h1 {
@@ -1046,21 +1046,25 @@ html, body {
     /* Mobile View */
     @media (max-width: 768px) {
       .center-wrapper {
-        padding: 1rem;
+        padding: 0.5rem 1rem; /* Reduced top/bottom padding */
       }
 
       .responsive-element {
         flex-direction: column;
-        padding: 1rem; /* Reduced for smaller screens */
+        padding: 0.5rem 1rem; /* Reduced top/bottom padding */
         max-width: 100%;
       }
 
+      .text-content {
+        gap: 0.75rem; /* Reduced gap */
+      }
+
       .text-content h1 {
-        font-size: 1.5rem; /* Reduced to fit single line */
+        font-size: 1.5rem;
         line-height: 1.2;
-        white-space: nowrap; /* Keep heading on one line */
+        white-space: nowrap;
         overflow: hidden;
-        text-overflow: ellipsis; /* Handle overflow gracefully */
+        text-overflow: ellipsis;
       }
 
       .text-content p {
@@ -1084,7 +1088,7 @@ html, body {
     /* Extra Small Screens */
     @media (max-width: 360px) {
       .text-content h1 {
-        font-size: 1.25rem; /* Further reduce for very small screens */
+        font-size: 1.25rem;
       }
     }
 
