--- a/index.html
+++ b/index.html
@@ -1122,193 +1122,226 @@ html, body {
 
 
 
-<section>
- <p class="section-growth-subtitlee" style="padding-left: 40px;">
-  Powered by
-</p>
-
-<div class="ticker-container" style="width:100%;max-width:1200px;margin:2rem;position:relative;overflow:hidden;border-radius:24px;background:#ffffff;box-shadow:0 16px 32px -8px rgba(0,0,0,0.12);border:1px solid rgba(255,255,255,0.12);transform:translateZ(0);transition:transform 0.3s cubic-bezier(0.4, 0, 0.2, 1);"
-     onmouseover="this.querySelector('.ticker-track').style.animationPlayState='paused'"
-     onmouseout="this.querySelector('.ticker-track').style.animationPlayState='running'">
-  
-  <!-- Gradient Overlays -->
-  <div class="gradient-overlay" style="position:absolute;top:0;bottom:0;left:0;width:120px;background:linear-gradient(90deg, rgba(255,255,255,0.95) 0%, rgba(255,255,255,0) 100%);pointer-events:none;z-index:2;"></div>
-  <div class="gradient-overlay" style="position:absolute;top:0;bottom:0;right:0;width:120px;background:linear-gradient(90deg, rgba(255,255,255,0) 0%, rgba(255,255,255,0.95) 100%);pointer-events:none;z-index:2;"></div>
-
-  <div class="ticker-track" style="display:flex;will-change:transform;animation:scroll 40s linear infinite;padding:2rem 0;">
-    <!-- Logo Items -->
-    <div class="ticker-item" style="flex-shrink:0;margin:0 2.5rem;transition:all 0.4s cubic-bezier(0.4, 0, 0.2, 1);transform-origin:center;filter:grayscale(100%) opacity(0.8);position:relative;"
-         onmouseover="this.style.transform='scale(1.15) translateY(-4px)';this.style.filter='grayscale(0%) opacity(1)';this.style.zIndex='1'"
-         onmouseout="this.style.transform='scale(1)';this.style.filter='grayscale(100%) opacity(0.8)';this.style.zIndex='0'">
-      <img src="https://d3kl8zsmmx4oop.cloudfront.net/Google_c2d8e527c7.svg" alt="Google" style="width:auto;height:40px;object-fit:contain;">
+<section class="section-growth">
+  <p class="section-growth-subtitle" style="padding-left: 40px;">Powered by</p>
+  <div class="ticker-container" 
+       role="region" 
+       aria-label="Partner logos ticker"
+       tabindex="0"
+       onmouseover="this.querySelector('.ticker-track').style.animationPlayState='paused'"
+       onmouseout="this.querySelector('.ticker-track').style.animationPlayState='running'"
+       onfocus="this.querySelector('.ticker-track').style.animationPlayState='paused'"
+       onblur="this.querySelector('.ticker-track').style.animationPlayState='running'">
+    <div class="gradient-overlay gradient-left"></div>
+    <div class="gradient-overlay gradient-right"></div>
+    <div class="ticker-track">
+      <div class="ticker-item" 
+           role="img" 
+           aria-label="Google logo"
+           tabindex="0"
+           onmouseover="this.style.transform='scale(1.15) translateY(-4px)';this.style.filter='grayscale(0%) opacity(1)';this.style.zIndex='1'"
+           onmouseout="this.style.transform='scale(1)';this.style.filter='grayscale(100%) opacity(0.8)';this.style.zIndex='0'"
+           onfocus="this.style.transform='scale(1.15) translateY(-4px)';this.style.filter='grayscale(0%) opacity(1)';this.style.zIndex='1'"
+           onblur="this.style.transform='scale(1)';this.style.filter='grayscale(100%) opacity(0.8)';this.style.zIndex='0'">
+        <img src="https://d3kl8zsmmx4oop.cloudfront.net/Google_c2d8e527c7.svg" alt="Google" style="width:auto;height:40px;object-fit:contain;">
+      </div>
+      <div class="ticker-item" 
+           role="img" 
+           aria-label="Partner logo"
+           tabindex="0"
+           onmouseover="this.style.transform='scale(1.15) translateY(-4px)';this.style.filter='grayscale(0%) opacity(1)';this.style.zIndex='1'"
+           onmouseout="this.style.transform='scale(1)';this.style.filter='grayscale(100%) opacity(0.8)';this.style.zIndex='0'"
+           onfocus="this.style.transform='scale(1.15) translateY(-4px)';this.style.filter='grayscale(0%) opacity(1)';this.style.zIndex='1'"
+           onblur="this.style.transform='scale(1)';this.style.filter='grayscale(100%) opacity(0.8)';this.style.zIndex='0'">
+        <img src="https://d3kl8zsmmx4oop.cloudfront.net/Mask_group_4_f997505a34.png" alt="Partner logo" style="width:auto;height:40px;object-fit:contain;">
+      </div>
+      <div class="ticker-item" 
+           role="img" 
+           aria-label="Google logo"
+           tabindex="0"
+           onmouseover="this.style.transform='scale(1.15) translateY(-4px)';this.style.filter='grayscale(0%) opacity(1)';this.style.zIndex='1'"
+           onmouseout="this.style.transform='scale(1)';this.style.filter='grayscale(100%) opacity(0.8)';this.style.zIndex='0'"
+           onfocus="this.style.transform='scale(1.15) translateY(-4px)';this.style.filter='grayscale(0%) opacity(1)';this.style.zIndex='1'"
+           onblur="this.style.transform='scale(1)';this.style.filter='grayscale(100%) opacity(0.8)';this.style.zIndex='0'">
+        <img src="https://d3kl8zsmmx4oop.cloudfront.net/Google_1_eb75fe0681.svg" alt="Google" style="width:auto;height:40px;object-fit:contain;">
+      </div>
+      <!-- Repeated items for smooth looping -->
+      <div class="ticker-item" 
+           role="img" 
+           aria-label="Google logo"
+           tabindex="0"
+           onmouseover="this.style.transform='scale(1.15) translateY(-4px)';this.style.filter='grayscale(0%) opacity(1)';this.style.zIndex='1'"
+           onmouseout="this.style.transform='scale(1)';this.style.filter='grayscale(100%) opacity(0.8)';this.style.zIndex='0'"
+           onfocus="this.style.transform='scale(1.15) translateY(-4px)';this.style.filter='grayscale(0%) opacity(1)';this.style.zIndex='1'"
+           onblur="this.style.transform='scale(1)';this.style.filter='grayscale(100%) opacity(0.8)';this.style.zIndex='0'">
+        <img src="https://d3kl8zsmmx4oop.cloudfront.net/Google_c2d8e527c7.svg" alt="Google" style="width:auto;height:40px;object-fit:contain;">
+      </div>
+      <div class="ticker-item" 
+           role="img" 
+           aria-label="Partner logo"
+           tabindex="0"
+           onmouseover="this.style.transform='scale(1.15) translateY(-4px)';this.style.filter='grayscale(0%) opacity(1)';this.style.zIndex='1'"
+           onmouseout="this.style.transform='scale(1)';this.style.filter='grayscale(100%) opacity(0.8)';this.style.zIndex='0'"
+           onfocus="this.style.transform='scale(1.15) translateY(-4px)';this.style.filter='grayscale(0%) opacity(1)';this.style.zIndex='1'"
+           onblur="this.style.transform='scale(1)';this.style.filter='grayscale(100%) opacity(0.8)';this.style.zIndex='0'">
+        <img src="https://d3kl8zsmmx4oop.cloudfront.net/Mask_group_4_f997505a34.png" alt="Partner logo" style="width:auto;height:40px;object-fit:contain;">
+      </div>
+      <div class="ticker-item" 
+           role="img" 
+           aria-label="Google logo"
+           tabindex="0"
+           onmouseover="this.style.transform='scale(1.15) translateY(-4px)';this.style.filter='grayscale(0%) opacity(1)';this.style.zIndex='1'"
+           onmouseout="this.style.transform='scale(1)';this.style.filter='grayscale(100%) opacity(0.8)';this.style.zIndex='0'"
+           onfocus="this.style.transform='scale(1.15) translateY(-4px)';this.style.filter='grayscale(0%) opacity(1)';this.style.zIndex='1'"
+           onblur="this.style.transform='scale(1)';this.style.filter='grayscale(100%) opacity(0.8)';this.style.zIndex='0'">
+        <img src="https://d3kl8zsmmx4oop.cloudfront.net/Google_1_eb75fe0681.svg" alt="Google" style="width:auto;height:40px;object-fit:contain;">
+      </div>
     </div>
-    <!-- Duplicate items 5x for smooth looping -->
-      <div class="ticker-item" style="flex-shrink:0;margin:0 2.5rem;transition:all 0.4s cubic-bezier(0.4, 0, 0.2, 1);transform-origin:center;filter:grayscale(100%) opacity(0.8);position:relative;"
-         onmouseover="this.style.transform='scale(1.15) translateY(-4px)';this.style.filter='grayscale(0%) opacity(1)';this.style.zIndex='1'"
-         onmouseout="this.style.transform='scale(1)';this.style.filter='grayscale(100%) opacity(0.8)';this.style.zIndex='0'">
-      <img src="	https://d3kl8zsmmx4oop.cloudfront.net/Mask_group_4_f997505a34.png" alt="Google" style="width:auto;height:40px;object-fit:contain;">
-    </div>
-    <!-- Duplicate items 5x for smooth looping -->
-      <div class="ticker-item" style="flex-shrink:0;margin:0 2.5rem;transition:all 0.4s cubic-bezier(0.4, 0, 0.2, 1);transform-origin:center;filter:grayscale(100%) opacity(0.8);position:relative;"
-         onmouseover="this.style.transform='scale(1.15) translateY(-4px)';this.style.filter='grayscale(0%) opacity(1)';this.style.zIndex='1'"
-         onmouseout="this.style.transform='scale(1)';this.style.filter='grayscale(100%) opacity(0.8)';this.style.zIndex='0'">
-      <img src="	https://d3kl8zsmmx4oop.cloudfront.net/Google_1_eb75fe0681.svg" alt="Google" style="width:auto;height:40px;object-fit:contain;">
-    </div>
-     <!-- Logo Items -->
-    <div class="ticker-item" style="flex-shrink:0;margin:0 2.5rem;transition:all 0.4s cubic-bezier(0.4, 0, 0.2, 1);transform-origin:center;filter:grayscale(100%) opacity(0.8);position:relative;"
-         onmouseover="this.style.transform='scale(1.15) translateY(-4px)';this.style.filter='grayscale(0%) opacity(1)';this.style.zIndex='1'"
-         onmouseout="this.style.transform='scale(1)';this.style.filter='grayscale(100%) opacity(0.8)';this.style.zIndex='0'">
-      <img src="https://d3kl8zsmmx4oop.cloudfront.net/Google_c2d8e527c7.svg" alt="Google" style="width:auto;height:40px;object-fit:contain;">
-    </div>
-    <!-- Duplicate items 5x for smooth looping -->
-      <div class="ticker-item" style="flex-shrink:0;margin:0 2.5rem;transition:all 0.4s cubic-bezier(0.4, 0, 0.2, 1);transform-origin:center;filter:grayscale(100%) opacity(0.8);position:relative;"
-         onmouseover="this.style.transform='scale(1.15) translateY(-4px)';this.style.filter='grayscale(0%) opacity(1)';this.style.zIndex='1'"
-         onmouseout="this.style.transform='scale(1)';this.style.filter='grayscale(100%) opacity(0.8)';this.style.zIndex='0'">
-      <img src="	https://d3kl8zsmmx4oop.cloudfront.net/Mask_group_4_f997505a34.png" alt="Google" style="width:auto;height:40px;object-fit:contain;">
-    </div>
-    <!-- Duplicate items 5x for smooth looping -->
-      <div class="ticker-item" style="flex-shrink:0;margin:0 2.5rem;transition:all 0.4s cubic-bezier(0.4, 0, 0.2, 1);transform-origin:center;filter:grayscale(100%) opacity(0.8);position:relative;"
-         onmouseover="this.style.transform='scale(1.15) translateY(-4px)';this.style.filter='grayscale(0%) opacity(1)';this.style.zIndex='1'"
-         onmouseout="this.style.transform='scale(1)';this.style.filter='grayscale(100%) opacity(0.8)';this.style.zIndex='0'">
-      <img src="	https://d3kl8zsmmx4oop.cloudfront.net/Google_1_eb75fe0681.svg" alt="Google" style="width:auto;height:40px;object-fit:contain;">
-    </div>
-      <!-- Duplicate items 5x for smooth looping -->
   </div>
-</div>
+</section>
+
 <style>
-    .section-growth {
+  :root {
+    --max-width: 1200px;
+    --container-padding: 32px;
+    --border-radius: 24px;
+    --shadow-color: rgba(0, 0, 0, 0.12);
+    --primary-color: #1a1a1a;
+    --secondary-color: #4a4a4a;
+    --accent-color: #006644;
+  }
+
+  .section-growth {
     max-width: var(--max-width);
     margin: 0 auto;
     padding: 0 16px;
   }
 
-  /* Base styles for desktop */
-  .container {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    background-color: #fff;
-    min-height: 80vh;
-    padding: var(--container-padding);
-    font-family: 'IBM Plex Sans', -apple-system, BlinkMacSystemFont, 'Segoe UI',
-      Roboto, Oxygen, Ubuntu, Cantarell, sans-serif;
-    gap: 32px;
-  }
-
-  .left,
-  .right {
-    flex: 1;
-    min-width: 0;
-  }
-
-  .left {
-    display: flex;
-    align-items: center;
-  }
-
-  .image {
-    width: 100%;
-    height: auto;
-    max-height: 500px;
-    object-fit: contain;
-    border-radius: var(--border-radius);
-    box-shadow: 0 4px 10px var(--shadow-color);
-  }
-
-  h1 {
-    font-size: clamp(1.75rem, 4vw, 2.25rem);
-    font-weight: 700;
-    color: var(--primary-color);
-    margin-bottom: 16px;
-    line-height: 1.3;
-  }
-
-  p {
-    color: var(--secondary-color);
+  .section-growth-subtitle {
     font-size: 1rem;
-    line-height: 1.6;
-    margin-bottom: 12px;
+    font-weight: 500;
+    color: var(--secondary-color);
+    margin-bottom: 8px;
   }
 
-  span {
-    font-weight: 600;
-    color: var(--accent-color);
+  .ticker-container {
+    width: 100%;
+    max-width: var(--max-width);
+    margin: 2rem auto;
+    position: relative;
+    overflow: hidden;
+    border-radius: var(--border-radius);
+    background: #ffffff;
+    box-shadow: 0 16px 32px -8px var(--shadow-color);
+    border: 1px solid rgba(255, 255, 255, 0.12);
+    transform: translateZ(0);
+    transition: transform 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+  }
+
+  .ticker-container:focus {
+    outline: 2px solid var(--accent-color);
+    outline-offset: 2px;
+  }
+
+  .gradient-overlay {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    width: 120px;
+    pointer-events: none;
+    z-index: 2;
+  }
+
+  .gradient-left {
+    left: 0;
+    background: linear-gradient(90deg, rgba(255, 255, 255, 0.95) 0%, rgba(255, 255, 255, 0) 100%);
+  }
+
+  .gradient-right {
+    right: 0;
+    background: linear-gradient(90deg, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0.95) 100%);
+  }
+
+  .ticker-track {
+    display: flex;
+    will-change: transform;
+    animation: scroll 40s linear infinite;
+    padding: 2rem 0;
+  }
+
+  .ticker-item {
+    flex-shrink: 0;
+    margin: 0 2.5rem;
+    transition: all 0.4s cubic-bezier(0.4, 0, 0.2, 1);
+    transform-origin: center;
+    filter: grayscale(100%) opacity(0.8);
+    position: relative;
+  }
+
+  .ticker-item:focus {
+    outline: none;
+    transform: scale(1.15) translateY(-4px);
+    filter: grayscale(0%) opacity(1);
+    z-index: 1;
+  }
+
+  .ticker-item img {
+    width: auto;
+    height: 40px;
+    object-fit: contain;
+  }
+
+  @keyframes scroll {
+    0% { transform: translateX(0); }
+    100% { transform: translateX(calc(-50% - 5rem)); }
   }
 
   /* Mobile responsiveness */
   @media (max-width: 768px) {
-    .container {
-      flex-direction: column;
-      min-height: auto;
-      padding: 32px 16px;
-      gap: 24px;
+    .ticker-container {
+      margin: 1rem auto !important;
+      border-radius: 16px !important;
     }
-
-    .left,
-    .right {
-      margin-bottom: 24px;
-      text-align: left;
+    .ticker-item {
+      margin: 0 1.5rem !important;
     }
-
-    .image {
-      max-height: 400px;
+    .ticker-item img {
+      height: 30px !important;
     }
-
-    h1 {
-      font-size: clamp(1.5rem, 5vw, 1.75rem);
+    .gradient-overlay {
+      width: 60px !important;
     }
   }
 
   @media (max-width: 480px) {
-    .image {
-      max-height: 300px;
+    .ticker-track {
+      padding: 1.5rem 0 !important;
     }
-
-    h1 {
-      font-size: 1.5rem;
+    .ticker-item {
+      margin: 0 1rem !important;
     }
+    .ticker-item img {
+      height: 24px !important;
+    }
+  }
 
-    p {
-      font-size: 0.9375rem;
+  @media (prefers-reduced-motion: reduce) {
+    .ticker-track {
+      animation: none !important;
+      justify-content: center !important;
     }
   }
 
   /* High contrast for accessibility */
   @media (prefers-contrast: high) {
-    h1 {
+    .section-growth-subtitle {
       color: #000;
     }
-
-    p {
-      color: #000;
-    }
-
-    span {
-      color: #006644;
+    .ticker-container {
+      border: 1px solid #000;
     }
   }
-   
-    @keyframes scroll {
-      0% { transform: translateX(0); }
-      100% { transform: translateX(calc(-50% - 5rem)); }
-    }
-    @media (max-width: 768px) {
-      .ticker-container { margin: 1rem !important; border-radius: 16px !important; }
-      .ticker-item { margin: 0 1.5rem !important; }
-      .ticker-item img { height: 30px !important; }
-      .gradient-overlay { width: 60px !important; }
-    }
-    @media (max-width: 480px) {
-      .ticker-track { padding: 1.5rem 0 !important; }
-      .ticker-item { margin: 0 1rem !important; }
-      .ticker-item img { height: 24px !important; }
-    }
-    @media (prefers-reduced-motion: reduce) {
-      .ticker-track { animation: none !important; justify-content: center !important; }
-    }
-  </style>
-
-</section>
+</style>
 
 
 
