--- a/index.html
+++ b/index.html
@@ -974,7 +974,7 @@ html, body {
       display: flex;
       justify-content: center;
       align-items: center;
-      padding: 0 2rem; /* Removed top/bottom padding */
+      padding: 40px 20px; /* Removed top/bottom padding */
     }
 
     .responsive-element {
