--- a/index.html
+++ b/index.html
@@ -1123,7 +1123,7 @@ html, body {
 
 
 <section class="section-growth">
-  <p class="section-growth-subtitle" style="padding-left: 40px;">Powered by</p>
+  <p class="section-growth-subtitle">Powered by</p>
   <div class="ticker-container" 
        role="region" 
        aria-label="Partner logos ticker"
