--- a/index.html
+++ b/index.html
@@ -1903,7 +1903,7 @@ html, body {
           <div class="card-cta">
             <span>Join our Free Career Guidance Session</span>
             <svg width="18" height="18" viewBox="0 0 20 20" aria-hidden="true">
-              <path d="M6.25 13..75L13.75 6.25M13.75 6.25H6.25M13.75 6.25V13.75" stroke="#ffffff" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+              <path d="M6.25 13.75L13.75 6.25M13.75 6.25H6.25M13.75 6.25V13.75" stroke="#ffffff" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
             </svg>
           </div>
         </div>
@@ -1912,15 +1912,14 @@ html, body {
     </a>
   </div>
 <style>
-    .section-wrapper {
+   .section-wrapper {
       width: 100%;
       max-width: 1200px;
       margin: 0 auto;
-      padding: 32px 16px;
+      padding: 16px;
       display: flex;
       justify-content: center;
       align-items: center;
-      min-height: 100vh;
     }
 
     .card-link {
@@ -2005,7 +2004,7 @@ html, body {
       transition: color 0.3s ease;
     }
 
-    .card-cta svg {
+    .card-dermal svg {
       width: 18px;
       height: 18px;
       transition: transform 0.3s cubic-bezier(0.4, 0, 0.2, 1);
@@ -2061,7 +2060,7 @@ html, body {
     /* Mobile and Tablet */
     @media (max-width: 768px) {
       .section-wrapper {
-        padding: 20px 12px;
+        padding: 12px;
       }
 
       .card-container {
