--- a/index.html
+++ b/index.html
@@ -1920,6 +1920,8 @@ html, body {
       display: flex;
       justify-content: center;
       align-items: center;
+       margin-left: 130px;
+  margin-right: 130px;
     }
 
     .card-link {
