--- a/index.html
+++ b/index.html
@@ -1917,7 +1917,7 @@ html, body {
       max-width: calc(100% - 260px); /* Account for 130px left + 130px right margins */
       margin-left: 130px;
       margin-right: 130px;
-      padding: 0px 20px 0px 20px;
+      padding: 16px 0;
       display: flex;
       justify-content: center;
       align-items: center;
