--- a/index.html
+++ b/index.html
@@ -2074,9 +2074,9 @@ html, body {
     @media (max-width: 768px) {
       .section-wrapper {
         max-width: calc(100% - 80px); /* Reduced margins for tablet */
-        margin-left: 40px;
-        margin-right: 40px;
-        padding: 12px;
+        margin-left: 20px;
+        margin-right: 20px;
+        padding: 0px 30px 0px 30px;
       }
 
       .card-container {
