--- a/course-1/payment.html
+++ b/course-1/payment.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Base Course 1 - Free</title>
+  <title>Payment for Course 1</title>
   <script type="module">
     import { initializeApp } from 'https://www.gstatic.com/firebasejs/10.7.0/firebase-app.js';
     import { getAuth, onAuthStateChanged } from 'https://www.gstatic.com/firebasejs/10.7.0/firebase-auth.js';
-    import { getFirestore, doc, setDoc, updateDoc } from 'https://www.gstatic.com/firebasejs/10.7.0/firebase-firestore.js';
+    import { getFirestore, doc, setDoc } from 'https://www.gstatic.com/firebasejs/10.7.0/firebase-firestore.js';
 
     const firebaseConfig = {
       apiKey: "AIzaSyBvqzYTaepJn-WvWMPSZJe26Ydkw-7MXLE",
@@ -32,17 +32,15 @@
       currentUser = user;
     });
 
-    async function payNow() {
+    async function simulatePayment() {
       if (!currentUser) {
         alert('User not authenticated!');
         return;
       }
 
       try {
-        // Simulate payment success - update Firestore payment document for this user
+        // Simulate payment success - update Firestore
         const paymentRef = doc(db, 'payments', currentUser.uid);
-
-        // Update the course1 payment to true
         await setDoc(paymentRef, { courses: { course1: true } }, { merge: true });
 
         alert('Payment successful! Redirecting to premium course...');
@@ -55,9 +53,8 @@
   </script>
 </head>
 <body>
-  <h1>Base Course 1 (Free Content)</h1>
-  <p>This is the free version of Course 1.</p>
-  <button onclick="window.location.href = './payment.html'">Pay to unlock premium course</button>
-
+  <h1>Payment Page for Course 1</h1>
+  <p>This is a simulated payment page.</p>
+  <button onclick="simulatePayment()">Pay Now</button>
 </body>
 </html>
