--- a/course-1/premium-course-1.html
+++ b/course-1/premium-course-1.html
@@ -2061,7 +2061,7 @@ function logout() {
       }
     } catch (error) {
       console.error("Error checking payment status:", error);
-      window.location.href = "/base-course.html"; // Fallback redirect
+      window.location.href = "/base-course-1.html"; // Fallback redirect
     }
   };
 
