--- a/course-1/premium-course-1.html
+++ b/course-1/premium-course-1.html
@@ -1961,7 +1961,7 @@ function logout() {
   import { getAuth, onAuthStateChanged, signOut } from 'https://www.gstatic.com/firebasejs/10.7.0/firebase-auth.js';
   import { getFirestore, doc, getDoc } from 'https://www.gstatic.com/firebasejs/10.7.0/firebase-firestore.js';
 
-  // Firebase config
+  // Firebase Config
   const firebaseConfig = {
     apiKey: "AIzaSyBvqzYTaepJn-WvWMPSZJe26Ydkw-7MXLE",
     authDomain: "syncskilll.firebaseapp.com",
@@ -1972,11 +1972,12 @@ function logout() {
     measurementId: "G-JWWWM2ZQSK"
   };
 
+  // Init Firebase
   const app = initializeApp(firebaseConfig);
   const auth = getAuth(app);
   const db = getFirestore(app);
 
-  // Navbar UI elements
+  // DOM elements (update if needed based on your HTML structure)
   const elements = {
     userAvatar: document.getElementById('userAvatar'),
     mobileUserAvatar: document.getElementById('mobileUserAvatar'),
@@ -1989,110 +1990,95 @@ function logout() {
     welcomeUserSpan: document.getElementById('user')
   };
 
-  const fallbackAvatar = 'https://cdn-icons-png.flaticon.com/512/3135/3135715.png';
+  // Clear UI data
+  function clearUserProfile() {
+    const fallbackAvatar = 'https://cdn-icons-png.flaticon.com/512/3135/3135715.png';
+    [elements.userName, elements.dropdownName, elements.mobileUserName].forEach(e => { if (e) e.textContent = '' });
+    [elements.dropdownEmail, elements.mobileUserEmail].forEach(e => { if (e) e.textContent = '' });
+    if (elements.welcomeUserSpan) elements.welcomeUserSpan.textContent = '';
+    [elements.userAvatar, elements.dropdownAvatar, elements.mobileUserAvatar].forEach(img => {
+      if (img) img.src = fallbackAvatar;
+    });
+  }
 
-  const clearUserProfile = () => {
-    try {
-      if (elements.userName) elements.userName.textContent = '';
-      if (elements.dropdownName) elements.dropdownName.textContent = '';
-      if (elements.mobileUserName) elements.mobileUserName.textContent = '';
-      if (elements.dropdownEmail) elements.dropdownEmail.textContent = '';
-      if (elements.mobileUserEmail) elements.mobileUserEmail.textContent = '';
-      if (elements.welcomeUserSpan) elements.welcomeUserSpan.textContent = '';
-
-      [elements.userAvatar, elements.dropdownAvatar, elements.mobileUserAvatar].forEach(img => {
-        if (img) {
-          img.src = fallbackAvatar;
-          img.removeAttribute('srcset');
-        }
-      });
-    } catch (error) {
-      console.error('Error clearing profile:', error);
-    }
-  };
-
-  const updateUserProfile = (user) => {
-    if (!user) {
-      clearUserProfile();
-      return;
-    }
-
-    const displayName = user.displayName || user.email?.split('@')[0] || 'User';
-    const email = user.email || 'No email';
+  // Fill Navbar
+  function updateUserProfile(user) {
+    if (!user) return clearUserProfile();
+    const fallbackAvatar = 'https://cdn-icons-png.flaticon.com/512/3135/3135715.png';
+    const displayName = user.displayName || user.email?.split('@')[0];
+    const email = user.email;
     const photoURL = user.photoURL || fallbackAvatar;
 
-    try {
-      if (elements.userName) elements.userName.textContent = displayName;
-      if (elements.dropdownName) elements.dropdownName.textContent = displayName;
-      if (elements.mobileUserName) elements.mobileUserName.textContent = displayName;
-      if (elements.dropdownEmail) elements.dropdownEmail.textContent = email;
-      if (elements.mobileUserEmail) elements.mobileUserEmail.textContent = email;
-      if (elements.welcomeUserSpan) elements.welcomeUserSpan.textContent = displayName;
+    if (elements.userName) elements.userName.textContent = displayName;
+    if (elements.dropdownName) elements.dropdownName.textContent = displayName;
+    if (elements.mobileUserName) elements.mobileUserName.textContent = displayName;
+    if (elements.dropdownEmail) elements.dropdownEmail.textContent = email;
+    if (elements.mobileUserEmail) elements.mobileUserEmail.textContent = email;
+    if (elements.welcomeUserSpan) elements.welcomeUserSpan.textContent = displayName;
 
-      [elements.userAvatar, elements.dropdownAvatar, elements.mobileUserAvatar].forEach(img => {
-        if (img) {
-          img.src = photoURL;
-          img.onerror = () => img.src = fallbackAvatar;
-        }
-      });
-    } catch (error) {
-      console.error('Profile update error:', error);
-    }
-  };
+    [elements.userAvatar, elements.dropdownAvatar, elements.mobileUserAvatar].forEach(img => {
+      if (img) {
+        img.src = photoURL;
+        img.onerror = () => img.src = fallbackAvatar;
+      }
+    });
+  }
 
-  const checkPaymentAndAccess = async (user) => {
+  // Main logic: Wait for Auth, then check payment
+  onAuthStateChanged(auth, async (user) => {
     if (!user) {
       clearUserProfile();
       window.location.href = "/login.html";
       return;
     }
 
-    updateUserProfile(user);
-
     try {
-      const paymentRef = doc(db, 'payments', user.uid);
+      // Check payment
+      const paymentRef = doc(db, "payments", user.uid);
       const paymentSnap = await getDoc(paymentRef);
+      const hasPaid = paymentSnap.exists() && paymentSnap.data().course1Paid;
 
-      if (!paymentSnap.exists() || !paymentSnap.data().course1Paid) {
-        console.warn("User has not purchased the premium course.");
+      if (!hasPaid) {
         window.location.href = "/base-course-1.html"; // Redirect to base course
-      } else {
-        console.log("User has access to premium course.");
+        return;
       }
-    } catch (error) {
-      console.error("Error checking payment status:", error);
-      window.location.href = "/base-course-1.html"; // Fallback redirect
-    }
-  };
 
-  onAuthStateChanged(auth, (user) => {
-    checkPaymentAndAccess(user);
+      // User is paid – show profile
+      updateUserProfile(user);
+
+    } catch (error) {
+      console.error("Payment check failed:", error);
+      alert("An error occurred. Redirecting to base course.");
+      window.location.href = "/base-course-1.html";
+    }
   });
 
-  // Logout
+  // Logout function
   window.logout = async () => {
     try {
       await signOut(auth);
       clearUserProfile();
       sessionStorage.clear();
       localStorage.clear();
-      window.location.href = '/index.html';
-    } catch (err) {
-      console.error('Logout error:', err);
-      alert("Logout failed.");
+      window.location.href = "/index.html";
+    } catch (error) {
+      alert("Logout failed. Try again.");
     }
   };
 
+  // Optional: Auto logout on inactivity
+  let inactivityTimer;
+  const resetTimer = () => {
+    clearTimeout(inactivityTimer);
+    inactivityTimer = setTimeout(() => logout(), 3600000); // 1 hour
+  };
+  ['mousemove', 'keydown', 'scroll', 'touchstart'].forEach(evt =>
+    window.addEventListener(evt, resetTimer)
+  );
+  resetTimer();
+
 </script>
 
-
-
-
-
-
-
-
-</script>
 
 </body>
 </html>
